force-app/main/default/objects/Product2/fields/AdministrarItemPor__c.field-meta.xml
<CustomField>
    <fullName>AdministrarItemPor__c</fullName>
    <label>Administrar Item Por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>