force-app/main/default/objects/Product2/fields/Caracteristica1__c.field-meta.xml
<CustomField>
    <fullName>Caracteristica1__c</fullName>
    <label>Característica1</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>