force-app/main/default/objects/Product2/fields/Caracteristica2__c.field-meta.xml
<CustomField>
    <fullName>Caracteristica2__c</fullName>
    <label>Característica2</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>