force-app/main/default/objects/Product2/fields/Caracteristica3__c.field-meta.xml
<CustomField>
    <fullName>Caracteristica3__c</fullName>
    <label>Característica3</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>