force-app/main/default/objects/Product2/fields/ClassificacaoItensImpostos__c.field-meta.xml
<CustomField>
    <fullName>ClassificacaoItensImpostos__c</fullName>
    <label>Classificação de Itens para Impostos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>