force-app/main/default/objects/Product2/fields/DescricaoItem__c.field-meta.xml
<CustomField>
    <fullName>DescricaoItem__c</fullName>
    <label>Descrição do Item</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>