force-app/main/default/objects/Product2/fields/Grupo_UM__c.field-meta.xml
<CustomField>
    <fullName>Grupo_UM__c</fullName>
    <label>Grupo UM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>