force-app/main/default/objects/Product2/fields/GrupoItens__c.field-meta.xml
<CustomField>
    <fullName>GrupoItens__c</fullName>
    <label>Grupo de Itens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>