force-app/main/default/objects/Product2/fields/IdentificadorAdicional__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorAdicional__c</fullName>
    <label>Identificador Adicional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>