force-app/main/default/objects/Product2/fields/IsencaoTIPI__c.field-meta.xml
<CustomField>
    <fullName>IsencaoTIPI__c</fullName>
    <label>Isenção do TIPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>