force-app/main/default/objects/Product2/fields/ItensPorUnidadeVenda__c.field-meta.xml
<CustomField>
    <fullName>ItensPorUnidadeVenda__c</fullName>
    <label>Itens por Unidade de Venda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>