force-app/main/default/objects/Product2/fields/Largura__c.field-meta.xml
<CustomField>
    <fullName>Largura__c</fullName>
    <label>Largura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>