force-app/main/default/objects/Product2/fields/Lista_de_Precos__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precos__c</fullName>
    <label>Lista de Preços</label>
    <length>255</length>
    <type>Text</type>
</CustomField>