force-app/main/default/objects/Product2/fields/NaoAplicarGruposDescontos__c.field-meta.xml
<CustomField>
    <fullName>NaoAplicarGruposDescontos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Aplicar Grupos de Descontos</label>
    <type>Checkbox</type>
</CustomField>