force-app/main/default/objects/Product2/fields/NomeEstrangeiro__c.field-meta.xml
<CustomField>
    <fullName>NomeEstrangeiro__c</fullName>
    <label>Nome Estrangeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>