force-app/main/default/objects/Product2/fields/NomeUMEmbalagem__c.field-meta.xml
<CustomField>
    <fullName>NomeUMEmbalagem__c</fullName>
    <label>Nome da UM de Embalagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>