force-app/main/default/objects/Product2/fields/NomeUMVendas__c.field-meta.xml
<CustomField>
    <fullName>NomeUMVendas__c</fullName>
    <label>Nome da UM de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>