force-app/main/default/objects/Product2/fields/NumeroItem__c.field-meta.xml
<CustomField>
    <fullName>NumeroItem__c</fullName>
    <label>Número do Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>