force-app/main/default/objects/Product2/fields/NumerosSerieLote__c.field-meta.xml
<CustomField>
    <fullName>NumerosSerieLote__c</fullName>
    <label>Números de Série e de Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>