force-app/main/default/objects/Product2/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>