force-app/main/default/objects/Product2/fields/Preco_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Preco_Unitario__c</fullName>
    <label>Preço Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>