force-app/main/default/objects/Product2/fields/QuantidadeEmbalagem__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeEmbalagem__c</fullName>
    <label>Quantidade por Embalagem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>