force-app/main/default/objects/Product2/fields/SituacaoProduto__c.field-meta.xml
<CustomField>
    <fullName>SituacaoProduto__c</fullName>
    <label>Situação do Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Avançado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>