force-app/main/default/objects/Product2/fields/TipoEnvio__c.field-meta.xml
<CustomField>
    <fullName>TipoEnvio__c</fullName>
    <label>Tipo de Envio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>