force-app/main/default/objects/Product2/fields/TipoItem__c.field-meta.xml
<CustomField>
    <fullName>TipoItem__c</fullName>
    <label>Tipo do Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>