force-app/main/default/objects/Product2/fields/TipoRegraAvancada__c.field-meta.xml
<CustomField>
    <fullName>TipoRegraAvancada__c</fullName>
    <label>Tipo de Regra Avançada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>