force-app/main/default/objects/Product2/fields/VinculadoRecurso__c.field-meta.xml
<CustomField>
    <fullName>VinculadoRecurso__c</fullName>
    <label>Vinculado a Recurso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>